# namemybaby

./: .dockerignore  .gitignore  Dockerfile  Name My Baby.json  PYTHON_LANGFLOW_SETUP.md  README.md  database-setup.sql  fly-deploy.sh  fly.toml  middleware.ts  migration-add-gender-preference.sql  migration-add-gender.sql  migration-add-inspiration-column.sql  migration-add-number-of-names.sql  migration-add-user-partner-names.sql  migration-add-user-voice-recordings-rpc.sql  migration-add-user-voice-recordings-table.sql  migration-add-voice-audio-rpc.sql  migration-add-voice-audio-table.sql  package-lock.json  package.json  supabase-schema.sql  user-preferences-table.sql
app/: globals.css  layout.tsx  page.tsx
components/: AISidebar.tsx  GeneratedNames.tsx  HomeContent.tsx  LeftSidebar.tsx  LoginButton.tsx  LoginPage.tsx  MoveNameModal.tsx  NameBucket.tsx  OnboardingWizard.tsx  Preferences.tsx  PreferencesPanel.tsx  PreferencesTab.tsx  ReportDetail.tsx  ReportPanel.tsx  ReportsList.tsx  SearchableSelect.tsx  SortableNameItem.tsx  StandardPreferences.tsx  TopHeader.tsx  VoiceAnalysis.tsx  VoiceSelectionSidebar.tsx
contexts/: AuthContext.tsx
data/: constants.ts
langflow-server/: .dockerignore  Dockerfile  QUICKSTART.md  README.md  app.py  env.example  pyproject.toml  requirements.txt
lib/: database.ts  preferences.ts  reports.ts  supabase-client.ts  supabase.ts  user-voice-recordings.ts  voice-audio.ts
scripts/: user_04ff58f4-0fe5-4704-acd1-f6858385303b_Aadi_pFZP5JQG7iQjIQuC4Bku_1764289832165.webm
supabase/: config.toml
types/: index.ts
(+8 files in other folders)
